fixes overflow right, caused by scrollbar

--- a/frontend/src/Components/SultenPage/SultenPage.module.scss
+++ b/frontend/src/Components/SultenPage/SultenPage.module.scss
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: stretch;
   align-content: center;
-  min-width: 100vw;
+  min-width: 100%;
   min-height: calc(100vh - 200px);
   z-index: 10;
   padding: calc($sulten-navbar-height / 2) 0 calc($sulten-navbar-height / 2) 0;
